# Telegraph

./: CODE_OF_CONDUCT.md  README.md  Telegraph.doap  com.github.fkinoshita.Morse.json  com.github.fkinoshita.Telegraph.json  io.github.fkinoshita.Telegraph.json  meson.build
.github/: FUNDING.yml
.reuse/: dep5
build-aux/: io.github.fkinoshita.Telegraph.Devel.json
data/: about_dialog.ui.in  com.github.fkinoshita.Morse.appdata.xml.in  com.github.fkinoshita.Morse.desktop.in  com.github.fkinoshita.Morse.gschema.xml  com.github.fkinoshita.Telegraph.appdata.xml.in  com.github.fkinoshita.Telegraph.desktop.in  com.github.fkinoshita.Telegraph.desktop.in.in  com.github.fkinoshita.Telegraph.gschema.xml.in  com.github.fkinoshita.Telegraph.metainfo.xml.in.in  io.github.fkinoshita.Telegraph.desktop.in.in  io.github.fkinoshita.Telegraph.gschema.xml.in  io.github.fkinoshita.Telegraph.metainfo.xml.in.in  meson.build  resources.gresource.xml  style.css
data/icons/: meson.build
data/ui/: window.ui
data/ui/gtk/: help-overlay.ui
po/: LINGUAS  POTFILES  POTFILES.in  README.md  be.po  bg.po  cs.po  de.po  fr.po  hr.po  hy.po  it.po  meson.build  nl.po  oc.po  pt_BR.po  ru.po  telegraph.pot  tr.po
src/: application.py  const.py.in  main.py  meson.build  morse.gresource.xml  morse.in  telegraph.gresource.xml  telegraph.in  utils.py  window.py  window.ui
src/gtk/: help-overlay.ui
src/ui/: window.ui
